--- a/themes/vimways/assets/sass/_post.scss
+++ b/themes/vimways/assets/sass/_post.scss
@@ -28,3 +28,9 @@ aside {
 		margin: 0 0 1rem 0;
 	}
 }
+.meta aside .content {
+	margin: 1.5rem 0 0 0;
+	h1 {
+		margin: 0;
+	}
+}
